Bug 155710 - Calc crashes every time when saving linked files on macOS
Summary: Calc crashes every time when saving linked files on macOS
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.3.2 release
Hardware: All macOS (All)
: medium major
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:24.8.0 target:24.2.2
Keywords:
Depends on:
Blocks: Calc-External-Datalink Crash
  Show dependency treegraph
 
Reported: 2023-06-06 16:29 UTC by Thomas Unterwieser
Modified: 2024-02-15 23:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Dashboard (247.49 KB, application/vnd.oasis.opendocument.spreadsheet)
2023-06-06 16:30 UTC, Thomas Unterwieser
Details
CRM (142.62 KB, application/vnd.oasis.opendocument.spreadsheet)
2023-06-06 16:30 UTC, Thomas Unterwieser
Details
Crash log (101.23 KB, text/plain)
2024-02-10 23:43 UTC, Patrick (volunteer)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Unterwieser 2023-06-06 16:29:20 UTC
Description:
Calc crashes when saving the file. Some data in the file are linked to a second Calc spreadsheet. Both files are saved on the local harddrive on a Mac. The failure also occures when both files are stored in the iCloud. If you copy the same files to a Linux Mint System, everything (even saving) works fine.

Steps to Reproduce:
1.Copy both files on the harddrive (or iCloud) on a Mac.
2.Open File "Dashboard" in Calc
3.Open File "CRM" in Calc
4.Saving File "CRM" in Calc


Actual Results:
Crash occures

Expected Results:
File is saving


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.5.3.2 (AARCH64) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 10; OS: Mac OS X 13.2.1; UI render: default; VCL: osx
Locale: de-AT (de_AT.UTF-8); UI: de-DE
Calc: threaded
Comment 1 Thomas Unterwieser 2023-06-06 16:30:04 UTC
Created attachment 187754 [details]
Dashboard
Comment 2 Thomas Unterwieser 2023-06-06 16:30:49 UTC
Created attachment 187755 [details]
CRM
Comment 3 steve 2023-06-28 16:10:32 UTC
macOS 13.4.1
LO Version: 7.5.4.2 (X86_64) / LibreOffice Community
Build ID: 36ccfdc35048b057fd9854c757a8b67ec53977b6
CPU threads: 4; OS: Mac OS X 13.4; UI render: default; VCL: osx
Locale: en-US (en_DE.UTF-8); UI: en-US
Calc: threaded

Reproduced crash with steps from initial report.

-> NEW
Comment 4 Patrick (volunteer) 2024-02-10 23:43:36 UTC
Created attachment 192502 [details]
Crash log

I can reproduce this in my local master build. Crash log attached.
Comment 5 Patrick (volunteer) 2024-02-11 01:19:05 UTC
Found the cause of this bug: LibreOffice is passing a Windows path (e.g. "z:\\...) to the macOS "file path resolution" code and calls to native macOS paths fail. Likely that the Windows path is saved somewhere in CRM.ods?

Anyway, I have submitted the following patch that fixes this bug:

https://gerrit.libreoffice.org/c/core/+/163223
Comment 6 Commit Notification 2024-02-11 12:39:27 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fa1b6aa517966991ce1a1d0135bd5dfae331ab9a

tdf#155710 handle conversion failures due to non-UTF8 strings

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Patrick (volunteer) 2024-02-11 14:15:50 UTC
The fix should be in tomorrow's (12 February 2024) nightly master builds:

https://dev-builds.libreoffice.org/daily/master/current.html

Note for testers: the nightly master builds install in /Applications/LibreOfficeDev.app. These builds are not codesigned like regular LibreOffice releases so you will need to execute the following Terminal command after installation:

xattr -d com.apple.quarantine /Applications/LibreOfficeDev.app
Comment 8 Commit Notification 2024-02-15 17:28:55 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/7fb33dc1e9ab0c2f48b7d5424e5bca5e9a14f709

tdf#155710 handle conversion failures due to non-UTF8 strings

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 steve 2024-02-15 23:23:17 UTC
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 43d962c27b6efb04d22b05ad8dec08f6056078a0
CPU threads: 8; OS: macOS 13.6.4; UI render: Skia/Metal; VCL: osx
Locale: en-US (en_DE.UTF-8); UI: en-US
Calc: threaded

Verified - unable to trigger a crash following steps from original report.