tdf#155710 handle conversion failures due to non-UTF8 strings

Windows and Linux paths can be passed as parameters to this function
and those paths may not always be UTF8 encoded like macOS paths.

Change-Id: I83f5ab491d3c0ddd938e512fbab3213af9ea16fd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163223
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>